Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-15504

QFileDialog for saving can get two file names when filters change.

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0
    • 4.6.3, 4.7.0, 4.7.1
    • None
    • 14f89148d8c6b12c8c6bfb4554428b30bb24b4bc

      There is a bug in QFileDialog when you use the save dialog and have multiple filters setup and change the filter, two files can be added in the File Name line edit.
      I have created a small example to reproduce and a patch that fix this.

      To reproduce with the example:

      *Select SameName.jpg.

      *Change filter to the psd one.

        1. patch.diff
          0.6 kB
        2. Pic1.jpg
          Pic1.jpg
          28 kB
        3. Pic2.jpg
          Pic2.jpg
          27 kB
        4. SameName.zip
          0.9 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            vfm Thierry Bastian (closed Nokia identity) (Inactive)
            xcm Martin Petersson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes