Fixed a double selection in QFileDialog when saving

Task-number: QTBUG-15504
Reviewed-by: Trust-Me